--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -1,3 +1,8 @@
-<button>-</button>
-<span>{{count$ | async}} <span>
-<button (click)="dispatchIncrement()" >+</button>
+<button (click)="dispatchDecrement()">-</button>
+<span
+  >{{count$ | async}}
+  <span>
+    <button (click)="dispatchIncrement()">+</button>
+    <button (click)="resetCounter()">Reset</button></span
+  ></span
+>
