--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -3,6 +3,6 @@
   >{{count$ | async}}
   <span>
     <button (click)="dispatchIncrement()">+</button>
-    <button (click)="resetCounter()">Reset</button></span
+    <button (click)="dispatchReset()">Reset</button></span
   ></span
 >
