--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -1,4 +1,4 @@
 <button (click)="dispatchDecrement()">-</button>
-<span>{{count$ | async}} <span>
+<span>{{count$ | async}} </span>
 <button (click)="dispatchIncrement()" >+</button>
 <button (click)="dispatchReset()">Reset</button>
